syntax="proto3";

package storehouse_service;
option go_package="genproto/storehouse_service";

import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

service Transfer_receive_productService {
    rpc CreateTransfer_receive_product(CreateTransfer_receive_productRequest) returns (Transfer_receive_product) {}
    rpc GetByIDTransfer_receive_product(Transfer_receive_productPrimaryKey) returns (Transfer_receive_product) {}
    rpc GetListTransfer_receive_product(GetListTransfer_receive_productRequest) returns (GetListTransfer_receive_productResponse) {}
    rpc UpdateTransfer_receive_product(UpdateTransfer_receive_productRequest) returns (Transfer_receive_product) {}
    rpc UpdatePatchTransfer_receive_product(UpdatePatchTransfer_receive_productRequest) returns (Transfer_receive_product) {}
    rpc DeleteTransfer_receive_product(Transfer_receive_productPrimaryKey) returns (google.protobuf.Empty) {}
}

message Transfer_receive_productPrimaryKey {
    string id = 1;
}

message Transfer_receive_product {
    string id = 1;
    int32 quantity = 2;
    string size_type = 3;
    double size_value = 4;
    string weight_type = 5;
    double weight_value = 6;
    string status = 7;
    string branch_id = 8;
    string branch_id_2 = 9;
    string product_id = 10;
    string transfer_send_id = 11;
    string created_at = 12;
    string updated_at = 13;
}

message CreateTransfer_receive_productRequest {
    int32 quantity = 1;
    string size_type = 2;
    double size_value = 3;
    string weight_type = 4;
    double weight_value = 5;
    string status = 6;
    string branch_id_2 = 7;
}

message UpdateTransfer_receive_productRequest {
    string id = 1;
    int32 quantity = 2;
    string size_type = 3;
    double size_value = 4;
    string weight_type = 5;
    double weight_value = 6;
    string status = 7;
    string branch_id = 8;
    string branch_id_2 = 9;
    string product_id = 10;
    string transfer_send_id = 11;
}

message UpdatePatchTransfer_receive_productRequest {
    string id = 1;
    google.protobuf.Struct fields = 2;
}

message GetListTransfer_receive_productRequest {
    int32 limit = 1;
    int32 offset = 2;
    string search = 3;
}

message GetListTransfer_receive_productResponse {
    int32 count = 1;
    repeated Transfer_receive_product transfer_receive_products = 2;
}
